# docs/swagger.json
@@ -47,7 +47,7 @@
                 }
             },
             "post": {
-                "description": "Create a new outcome",
+                "description": "Create a new category",
                 "consumes": [
                     "application/json"
                 ],
@@ -55,17 +55,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "outcomes"
+                    "categories"
                 ],
-                "summary": "Create an outcome",
+                "summary": "Create a category",
                 "parameters": [
                     {
-                        "description": "Outcome payload",
-                        "name": "outcome",
+                        "description": "Category payload",
+                        "name": "category",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1.CreateOutcomeRequest"
+                            "$ref": "#/definitions/v1.CreateCategoryRequest"
                         }
                     }
                 ],
@@ -73,7 +73,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/v1.OutcomeResponse"
+                            "$ref": "#/definitions/v1.CategoryResponse"
                         }
                     },
                     "400": {
@@ -262,6 +262,50 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "Create a new outcome",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "outcomes"
+                ],
+                "summary": "Create an outcome",
+                "parameters": [
+                    {
+                        "description": "Outcome payload",
+                        "name": "outcome",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.CreateOutcomeRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/v1.OutcomeResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request error",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    }
+                }
             }
         },
         "/api/v1/outcomes/{id}": {
@@ -301,6 +345,45 @@
                     },
                     "404": {
                         "description": "Not found error",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete an outcome by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "outcomes"
+                ],
+                "summary": "Delete an outcome",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Outcome ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad request error",
                         "schema": {
                             "$ref": "#/definitions/domain.ErrorResponse"
                         }
