# internal/router/v1.go
@@ -18,4 +18,5 @@ func RegisterV1Routes(mux *http.ServeMux, h *handler.Handlers) {
 	mux.HandleFunc("GET /api/v1/outcomes/", h.V1.Outcomes.GetAllOutcomes)
 	mux.HandleFunc("GET /api/v1/outcomes/{id}", h.V1.Outcomes.GetOutcomeById)
 	mux.HandleFunc("PATCH /api/v1/outcomes/{id}", h.V1.Outcomes.PatchOutcome)
+	mux.HandleFunc("DELETE /api/v1/outcomes/{id}", h.V1.Outcomes.DeleteOutcomeById)
 }
